[package]
name = "zellij"
version = "0.40.0"
authors = ["Aram Drevekenin <aram@poor.dev>"]
edition = "2021"
description = "A terminal workspace with batteries included"
license = "MIT"
repository = "https://github.com/zellij-org/zellij"
homepage = "https://zellij.dev"
include = ["src/**/*", "assets/layouts/*", "assets/config/*", "LICENSE.md", "README.md", "!**/*_test.*", "!**/tests/**/*"]
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zellij-client = { path = "zellij-client/", version = "0.40.0" }
zellij-server = { path = "zellij-server/", version = "0.40.0" }
zellij-utils = { path = "zellij-utils/", version = "0.40.0" }
thiserror = "1.0.40"
names = { version = "0.14.0", default-features = false }
log = "0.4.17"
dialoguer = "0.11.0"
suggest = "0.5.0"

[dev-dependencies]
insta = { version = "1.6.0", features = ["backtrace"] }
ssh2 = "0.9.1"
rand = "0.8.0"
regex = "1.8.1"

[workspace]
members = [
    "default-plugins/compact-bar",
    "default-plugins/status-bar",
    "default-plugins/strider",
    "default-plugins/tab-bar",
    "default-plugins/fixture-plugin-for-tests",
    "default-plugins/session-manager",
    "zellij-client",
    "zellij-server",
    "zellij-utils",
    "zellij-tile",
    "zellij-tile-utils",
    "xtask",
    ".",
]

[workspace.dependencies]
thiserror = "1.0.40"
names = { version = "0.14.0", default-features = false }
log = "0.4.17"
dialoguer = "0.11"
suggest = "0.5.0"
# For default plugins
## For compact-bar
ansi_term = "0.12.1"
## for fixture-plugin-for-tests
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zellij-tile = { path = "../../zellij-tile" }
## for session manager
fuzzy-matcher = "0.3.7"
unicode-width = "0.1.10"
humantime = "2.1.0"
## For status bar
lazy_static = "1.4.0"
rand = "0.8.4"
## For strider
colored = "2.0.0"
pretty-bytes = "0.2.2"
ignore = "0.4.20"
strip-ansi-escapes = "0.2.0"
# XTask

xshell = "= 0.2.2"
xflags = "0.3.1"
which = "6.0.0"
toml = "0.8.8"
prost-build = "0.12.3"
# Zellij client
mio = { version = "0.8.10", features = ['os-ext'] }
serde_yaml = "0.8"
# Zellij server
highway = "1.1"
async-trait = "0.1.50"
base64 = "0.21.7"
byteorder = "1.4.3"
daemonize = "0.5.0"
url = "2.2.2"
wasmer = "3.1.1"
wasmer-wasi = "3.1.1"
cassowary = "0.3.0"
typetag = "0.2.15"
chrono = "0.4.19"
close_fds = "0.3.2"
sysinfo = "0.22.5"
sixel-tokenizer = "0.1.0"
sixel-image = "0.1.0"
arrayvec = "0.7.2"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
semver = "1.0.21"
# zellij utils
anyhow = { version = "1.0.70"}
backtrace = "0.3.55"
rmp-serde = "1.1.0"
clap = { version = "3.2.2"}
clap_complete = "3.2.1"
colorsys = "0.6.5"
crossbeam = "0.8.1"
directories = "5.0"
libc = "0.2"
nix = "0.23.1"
once_cell = "1.8.0"
percent-encoding = "2.1.0"
strum = "0.25.0"
strum_macros = "0.25.3"
vte = { version = "0.13.0", default-features = false }
miette = { version = "5.7.0", features = ["fancy"] }
regex = "1.5.5"
tempfile = "3.2.0"
kdl = { version = "4.5.0", features = ["span"] }
shellexpand = "3.0.0"
async-channel = "1.8.0"
include_dir = "0.7.3"
prost = "0.11.9"
common-path = "1.0.0"
# zellij utils not wasm
termwiz = "0.20.0"
log4rs = "1.2.0"
signal-hook = "0.3"
interprocess = "1.2.1"
async-std = { version = "1.3.0", features = ["unstable", "attributes"] }
notify-debouncer-full = "0.3.1"
futures = "0.3.28"
surf = { version = "2.3.2", default-features = false, features = [
    "curl-client",
] }
openssl-sys = { version = "0.9.93", features = ["vendored"] }
# dev dependency
insta = "1.6.0"
expect-test = "1.4.1"

[profile.dev-opt]
inherits = "dev"

[profile.dev-opt.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true

[package.metadata.deb]
depends = "$auto"
license-file = ["LICENSE.md", "4"]
assets = [
  ["assets/man/zellij.1", "usr/share/man/man1/zellij.1", "644"],
  ["target/release/zellij", "usr/bin/zellij", "755"],
  ["GOVERNANCE.md", "usr/share/doc/zellij/GOVERNANCE.md", "644"],
  ["README.md", "usr/share/doc/zellij/README.md", "644"],
  ["assets/layouts/*", "usr/share/zellij/layouts/", "644"],
  ["assets/plugins/*", "usr/share/zellij/plugins/", "644"],
  ["assets/completions/zellij.bash", "usr/share/bash-completion/completions/zellij.bash", "644"],
  ["assets/completions/zellij.fish", "usr/share/fish/vendor_completions.d/zellij.fish", "644"],
  ["assets/completions/_zellij", "usr/share/zsh/vendor-completions/_zellij", "644"],
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[features]
# See remarks in zellij_utils/Cargo.toml
default = ["zellij-utils/plugins_from_target"]
disable_automatic_asset_installation = ["zellij-utils/disable_automatic_asset_installation"]
unstable = ["zellij-client/unstable", "zellij-utils/unstable"]
singlepass = ["zellij-server/singlepass"]

# uncomment this when developing plugins in the Zellij UI to make plugin compilation faster
# [profile.dev.package."*"]
# opt-level = 3
