[package]
name = "zellij"
version = "0.41.0"
authors = ["Aram Drevekenin <aram@poor.dev>"]
edition = "2021"
description = "A terminal workspace with batteries included"
license = "MIT"
repository = "https://github.com/zellij-org/zellij"
homepage = "https://zellij.dev"
include = ["src/**/*", "assets/layouts/*", "assets/config/*", "LICENSE.md", "README.md", "!**/*_test.*", "!**/tests/**/*"]
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zellij-client = { path = "zellij-client/", version = "0.41.0" }
zellij-server = { path = "zellij-server/", version = "0.41.0" }
zellij-utils = { path = "zellij-utils/", version = "0.41.0" }
thiserror = "1.0.40"
names = { version = "0.14.0", default-features = false }
log = "0.4.17"
dialoguer = "0.10.4"
suggest = "0.4.0"

[dev-dependencies]
insta = { version = "1.6.0", features = ["backtrace"] }
ssh2 = "0.9.1"
rand = "0.8.0"
regex = "1.8.1"

[workspace]
members = [
    "default-plugins/compact-bar",
    "default-plugins/status-bar",
    "default-plugins/strider",
    "default-plugins/tab-bar",
    "default-plugins/fixture-plugin-for-tests",
    "default-plugins/session-manager",
    "zellij-client",
    "zellij-server",
    "zellij-utils",
    "zellij-tile",
    "zellij-tile-utils",
    "xtask",
    ".",
]

[profile.dev-opt]
inherits = "dev"

[profile.dev-opt.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true

[package.metadata.deb]
depends = "$auto"
license-file = ["LICENSE.md", "4"]
assets = [
  ["assets/man/zellij.1", "usr/share/man/man1/zellij.1", "644"],
  ["target/release/zellij", "usr/bin/zellij", "755"],
  ["GOVERNANCE.md", "usr/share/doc/zellij/GOVERNANCE.md", "644"],
  ["README.md", "usr/share/doc/zellij/README.md", "644"],
  ["assets/layouts/*", "usr/share/zellij/layouts/", "644"],
  ["assets/plugins/*", "usr/share/zellij/plugins/", "644"],
  ["assets/completions/zellij.bash", "usr/share/bash-completion/completions/zellij.bash", "644"],
  ["assets/completions/zellij.fish", "usr/share/fish/vendor_completions.d/zellij.fish", "644"],
  ["assets/completions/_zellij", "usr/share/zsh/vendor-completions/_zellij", "644"],
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[features]
# See remarks in zellij_utils/Cargo.toml
default = ["zellij-utils/plugins_from_target"]
disable_automatic_asset_installation = ["zellij-utils/disable_automatic_asset_installation"]
unstable = ["zellij-client/unstable", "zellij-utils/unstable"]
singlepass = ["zellij-server/singlepass"]

# uncomment this when developing plugins in the Zellij UI to make plugin compilation faster
# [profile.dev.package."*"]
# opt-level = 3
