[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true


[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
prost-build = { version = "0.11.9", default-features = false }
toml = { version = "0.5", default-features = false }
which = { version = "4.2", default-features = false }
xflags = { version = "0.3.2", default-features = false }
# TODO(hartan): Update this once we get a new release. See:
#   <https://github.com/matklad/xshell/issues/63>
xshell = { version = "= 0.2.2", default-features = false }

[lints.rust]
# Only required because we need to fix `xshell` to `=0.2.2`
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(trick_rust_analyzer_into_highlighting_interpolated_bits)'] }
