[package]
name = "zellij-client"
version.workspace = true
authors = ["Kunal Mohan <kunalmohan99@gmail.com>"]
edition.workspace = true
description = "The client-side library for Zellij"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: we might want to move these to be workspace dependencies as well, but
# work is currently being done on moving all our async stuff to tokio from async_std,
# so let's see how that works out before rocking the boat
futures = { version = "0.3.30", optional = true }
axum = { version = "0.8.4", features = ["ws"], optional = true }
axum-extra = { version = "0.10.1", features = ["cookie"], optional = true }
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
time = { version = "0.3", optional = true }
tower-http = { version = "0.6.4", features = ["cors"], optional = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
daemonize = { workspace = true }
dialoguer = { workspace = true }
interprocess = { workspace = true }
lazy_static = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
mio = { version = "0.7.11", default-features = false, features = ['os-ext'] }
nix = { workspace = true }
notify = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { version = "0.8", default-features = false }
signal-hook = { workspace = true }
termwiz = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
include_dir = { workspace = true }
zellij-utils = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
isahc = { workspace = true }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] } #TODO: see about this native-tls...
futures-util = "0.3"
urlencoding = "2.1"

[dev-dependencies]
insta = "1.6.0"
serde_json = "1.0"
serial_test = "3.0"

[features]
unstable = []
web_server_capability = [
    "dep:futures",
    "dep:axum",
    "dep:axum-extra",
    "dep:time",
    "dep:axum-server",
    "dep:tower-http",
    "zellij-utils/web_server_capability",
]
