[package]
name = "zellij-server"
version.workspace = true
authors = ["Kunal Mohan <kunalmohan99@gmail.com>"]
edition.workspace = true
description = "The server-side library for Zellij"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = { workspace = true }
anyhow = { workspace = true }
arrayvec = { version = "0.7.2", default-features = false, features = ["std"] }
async-channel = { version = "1.8.0", default-features = false }
async-std = { workspace = true }
async-trait = { version = "0.1.50", default-features = false }
base64 = { version = "0.13.0", default-features = false, features = ["std"] }
byteorder = { version = "1.4.3", default-features = false, features = ["std"] }
bytes = { version = "1.6.0", default-features = false, features = ["std"] }
cassowary = { version = "0.3.0", default-features = false }
chrono = { version = "0.4.19", default-features = false, features = ["std", "clock"] }
close_fds = { version = "0.3.2", default-features = false }
crossbeam = { version = "0.8", default-features = false, features = ["crossbeam-channel", "std"] }
daemonize = { workspace = true }
highway = { version = "0.6.4", default-features = false, features = ["std"] }
interprocess = { workspace = true }
isahc = { workspace = true }
lazy_static = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
notify-debouncer-full = { workspace = true }
prost = { workspace = true }
regex = { workspace = true }
semver = { version = "0.11.0", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
signal-hook = { workspace = true }
sixel-image = { version = "0.1.0", default-features = false }
sixel-tokenizer = { version = "0.1.0", default-features = false }
sysinfo = { version = "0.22.5", default-features = false }
tempfile = { workspace = true }
typetag = { version = "0.1.7", default-features = false }
unicode-width = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
vte = { workspace = true }
wasmi_wasi = { version = "0.51.1" }
zellij-utils = { workspace = true }
tokio = { workspace = true }
once_cell = "1.19"
num_cpus = "1.16"

[dependencies.wasmi]
version = "0.51.1"
default-features = false
features = ["std"]

[dev-dependencies]
insta = "1.6.0"
tempfile = "3.2.0"
wasmi = { version = "0.51.1", features = ["std"] }

[features]
web_server_capability = ["zellij-utils/web_server_capability"]
