[package]
name = "zellij-tile-utils"
version = "0.44.0"
authors = ["denis <denismaximov98@gmail.com>"]
edition.workspace = true
description = "A utility library for Zellij plugins"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = { workspace = true }
