[package]
name = "zellij-tile"
version.workspace = true
authors = ["Brooks J Rady <b.j.rady@gmail.com>"]
edition.workspace = true
description = "A small client-side library for writing Zellij plugins"
license.workspace = true

[dependencies]
clap = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
zellij-utils = { workspace = true }
