[package]
name = "zellij-utils"
version = "0.41.0"
authors = ["Kunal Mohan <kunalmohan99@gmail.com>"]
edition = "2021"
description = "A utility library for Zellij client and server"
license = "MIT"
include = ["src/**/*", "assets/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
backtrace = "0.3.55"
rmp-serde = "1.1.0"
clap = { version = "3.2.2", features = ["derive", "env"] }
clap_complete = "3.2.1"
colored = "2.0.0"
colorsys = "0.6.5"
crossbeam = "0.8.1"
directories = "5.0"
lazy_static = "1.4.0"
libc = "0.2"
nix = "0.23.1"
once_cell = "1.8.0"
percent-encoding = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strip-ansi-escapes = "0.1.0"
strum = "0.20.0"
strum_macros = "0.20.1"
thiserror = "1.0.30"
url = { version = "2.2.2", features = ["serde"] }
vte = { version = "0.11.0", default-features = false }
log = "0.4.17"
unicode-width = "0.1.8"
miette = { version = "5.7.0", features = ["fancy"] }
regex = "1.5.5"
tempfile = "3.2.0"
kdl = { version = "4.5.0", features = ["span"] }
shellexpand = "3.0.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
async-channel = "1.8.0"
include_dir = "0.7.3"
prost = "0.11.9"
common-path = "1.0.0"

#[cfg(not(target_family = "wasm"))]
[target.'cfg(not(target_family = "wasm"))'.dependencies]
termwiz = "0.20.0"
log4rs = "1.2.0"
signal-hook = "0.3"
interprocess = "1.2.1"
async-std = { version = "1.3.0", features = ["unstable", "attributes"] }
notify-debouncer-full = "0.1.0"
humantime = "2.1.0"
futures = "0.3.28"
surf = { version = "2.3.2", default-features = false, features = [
    "curl-client",
] }
openssl-sys = { version = "0.9.93", features = ["vendored"] }

[dev-dependencies]
insta = { version = "1.6.0", features = ["backtrace"] }
expect-test = "1.4.1"

[build-dependencies]
prost-build = "0.11.9"

[features]
# If this feature is NOT set (default):
#   - builtin plugins (status-bar, tab-bar, ...) are loaded directly from the application binary
# If this feature is set:
#   - builtin plugins MUST be available from whatever is configured as `PLUGIN_DIR`
disable_automatic_asset_installation = []
unstable = []
plugins_from_target = []
