[package]
name = "zellij-utils"
version = "0.43.0"
authors = ["Kunal Mohan <kunalmohan99@gmail.com>"]
edition = "2021"
description = "A utility library for Zellij client and server"
license = "MIT"
include = ["src/**/*", "assets/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-channel = { version = "1.8.0", default-features = false }
backtrace = { version = "0.3.55", default-features = false, features = ["std"] }
bitflags = { version = "2.5.0", default-features = false }
clap = { workspace = true }
clap_complete = { version = "3.2.1", default-features = false }
colored = { version = "2.0.0", default-features = false }
colorsys = { version = "0.6.5", default-features = false, features = ["std"] }
crossbeam = { version = "0.8.1", default-features = false, features = ["alloc", "std"] }
directories = { version = "5.0", default-features = false }
include_dir = { version = "0.7.3", default-features = false }
kdl = { version = "4.5.0", default-features = false, features = ["span"] }
lazy_static = { version = "1.4.0", default-features = false }
libc = { version = "0.2", default-features = false, features = ["std"] }
log = { workspace = true }
miette = { version = "5.7.0", default-features = false, features = ["fancy"] }
nix = { version = "0.23.1", default-features = false }
percent-encoding = { version = "2.1.0", default-features = false, features = ["std"] }
prost = { version = "0.11.9", default-features = false, features = ["std", "prost-derive"] }
regex = { version = "1.5.5", default-features = false, features = ["perf", "std"] }
rmp-serde = { version = "1.1.0", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
shellexpand = { version = "3.0.0", default-features = false, features = ["base-0", "tilde"] }
strip-ansi-escapes = { version = "0.1.0", default-features = false }
strum = { workspace = true }
strum_macros = { workspace = true }
tempfile = { version = "3.2.0", default-features = false }
thiserror = { workspace = true }
unicode-width = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
vte = { version = "0.11.0", default-features = false }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
termwiz = { version = "0.23.2", default-features = false }
log4rs = { version = "1.2.0", default-features = false, features = ["pattern_encoder", "rolling_file_appender", "compound_policy", "fixed_window_roller", "size_trigger"] }
notify-debouncer-full = { version = "0.1.0", default-features = false }
signal-hook = { version = "0.3", default-features = false, features = ["iterator"] }
interprocess = { version = "1.2.1", default-features = false }
async-std = { version = "1.3.0", default-features = false, features = ["attributes", "default", "std", "unstable"] }
humantime = { version = "2.1.0", default-features = false }
openssl-sys = { version = "0.9.93", default-features = false, features = ["vendored"], optional = true }
isahc = { version = "1.7.2", default-features = false, features = ["http2", "text-decoding"] }
curl-sys = { version = "0.4", default-features = false, features = ["force-system-lib-on-osx", "ssl"], optional = true }

[dev-dependencies]
insta = { version = "1.6.0", features = ["backtrace"] }
expect-test = "1.4.1"

[build-dependencies]
prost-build = "0.11.9"

[features]
# If this feature is NOT set (default):
#   - builtin plugins (status-bar, tab-bar, ...) are loaded directly from the application binary
# If this feature is set:
#   - builtin plugins MUST be available from whatever is configured as `PLUGIN_DIR`
disable_automatic_asset_installation = []
unstable = []
plugins_from_target = []
vendored_curl = ["isahc/static-curl", "dep:openssl-sys", "dep:curl-sys"]
